docs/versioned_docs/version-0.7.1/nargo/01_commands.md
---
title: Commands
description:
  Noir CLI Commands for Noir Prover and Verifier to create, execute, prove and verify programs,
  generate Solidity verifier smart contract and compile into JSON file containing ACIR
  representation and ABI of circuit.
keywords:
  [
    Nargo,
    Noir CLI,
    Noir Prover,
    Noir Verifier,
    generate Solidity verifier,
    compile JSON file,
    ACIR representation,
    ABI of circuit,
    TypeScript,
  ]
---

## General options

```
Options:
  -s, --show-ssa        Emit debug information for the intermediate SSA IR
  -d, --deny-warnings   Quit execution when warnings are emitted
      --show-output     Display output of `println` statements during tests
  -h, --help            Print help
```

## `nargo help [subcommand]`

Prints the list of available commands or specific information of a subcommand.

_Arguments_

- `<subcommand>` - The subcommand whose help message to display

## `nargo check`

Generate the `Prover.toml` and `Verifier.toml` files for specifying prover and verifier in/output
values of the Noir program respectively.

## `nargo codegen-verifier`

Generate a Solidity verifier smart contract for the program.

## `nargo compile <circuit_name>`

Compile the program into a JSON build artifact file containing the ACIR representation and the ABI
of the circuit. This build artifact can then be used to generate and verify proofs.

_Arguments_

- `<circuit_name>` - The name of the circuit file

_Options_

- `-c, --contracts` - Compile each contract function used within the program
- `--print-acir` - Displays the ACIR for the compiled circuit

## `nargo new <package_name> [path]`

Creates a new Noir project.

_Arguments_

- `<package_name>` - Name of the package
- `[path]` - The path to save the new project

## `nargo execute [witness_name]`

Runs the Noir program and prints its return value.

_Arguments_

- `[witness_name]` - The name of the witness

_Usage_

The inputs to the circuit are read from the `Prover.toml` file generated by `nargo check`, which
must be filled in.

To save the witness to file, run the command with a value for the `witness-name` argument. A
`<witness_name-name>.tr` file will then be saved in the `build` folder.

> **Info:** The `.tr` file is the witness file. The witness file can be considered as program inputs
> parsed for your program's ACIR.
>
> This file can be passed along with circuit's ACIR into a TypeScript project for proving and
> verification. See the [TypeScript](../typescript#proving-and-verifying-externally-compiled-files)
> section to learn more.

## `nargo prove <proof_name>`

Creates a proof for the program.

_Arguments_

- `<proof_name>` - The name of the proof

_Options_

- `-v, --verify` - Verify proof after proving

## `nargo verify <proof>`

Given a proof and a program, verify whether the proof is valid.

_Arguments_

- `<proof>` - The proof to verify

## `nargo test <pattern>`

Nargo will automatically compile and run any functions which have the decorator `#[test]` on them if
you run `nargo test`.

See an example on the [testing page](./testing).

_Arguments_

- `<pattern>` - a pattern to indicate to only run tests with names containing the pattern

## `nargo gates`

Counts the occurrences of different gates in circuit

## `nargo lsp`

Start a long-running Language Server process that communicates over stdin/stdout.
Usually this command is not run by a user, but instead will be run by a Language Client, such as [vscode-noir](https://github.com/noir-lang/vscode-noir).
